# nwallpaper

./: Cargo.toml
shell/: gsettings.sh
source/: bing_daily.rhai
src/: app.rs  main.rs  source.rs
src/ui/: window.ui  window.ui~
