[package]
name = "wallpaper"
version = "0.1.0"
authors = ["nealian <nealian@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# orbtk = "0.3.1-alpha3"
gtk = "0.9.0"
gdk = "0.13.0"
gdk-pixbuf = "0.9.0"
rhai = "0.20.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }


