[package]
authors = ["nealian <nealian@163.com>"]
edition = "2018"
name = "wallpaper"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "0.13.0"
gdk-pixbuf = "0.9.0"
gio = "^0.9"
glib = "^0.10"
gtk = "0.9.0"
reqwest = {version = "0.11", features = ["blocking", "json"]}
rhai = "0.20.0"
tokio = {version = "1", features = ["full"]}
time = "0.1.41"
async-std = "^1.6.1"